Primer Commit de la rama

--- a/src/app/components/home/edit-acerca-de.component.html
+++ b/src/app/components/home/edit-acerca-de.component.html
@@ -1,4 +1,4 @@
-<div  class="container-fluid editSection abs-center" *ngIf="persona">
+<!-- <div  class="container-fluid editSection abs-center" *ngIf="persona">
     <form (ngSubmit)="onUpdate()" novalidate #f="ngForm" class="text-white col-5">
         <div class="form-group pb-2">
             <label for="nombre">Nombre de la persona</label>
@@ -24,4 +24,4 @@
             Editar Perfil
         </button>
     </form>
-</div>
+</div> -->
