Configuración de los fondos, generalización de clases

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,6 +1,6 @@
-<div class="container-contacto m-0 p-0">
+<div class="m-0 p-0 editSection" >
     <!-- Formulario -->
-    <div class="container d-flex align-items-center px-0 justify-content-center contact-section my-0 py-0">
+    <div class="container d-flex align-items-center px-0 justify-content-center contact-section  my-0 py-0">
 
         <div class="col-12 col-sm-6 col-lg-5 card rounded-3 p-3 ">
             <!-- Título -->
@@ -9,20 +9,20 @@
             <div class="row">
                 <!-- Columnas Breakpoint 6 -->
                 <div class="col-6 form-floating ">
-                    <input type="text" class="form-control shadow-none" placeholder="Nombre" id="floatingInput">
+                    <input type="text" class="form-control" placeholder="Nombre" id="floatingInput">
                     <label for="floatingInput" class="px-4  text-muted">Nombre</label>
                 </div>
                 <div class="col-6 form-floating ">
-                    <input type="text" class="form-control shadow-none" placeholder="Asunto" id="floatingInput">
+                    <input type="text" class="form-control" placeholder="Asunto" id="floatingInput">
                     <label for="floatingInput" class="px-4  text-muted">Asunto</label>
                 </div>
                  <!-- Columnas Breakpoint 12 -->
                 <div class="col-12 mt-2 form-floating">
-                    <input type="email" class="form-control shadow-none" id="floatingInput" placeholder="email@gmail.com">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="email@gmail.com">
                     <label for="floatingInput" class="px-4 text-muted">email@gmail.com</label>
                 </div>
                 <div class="col-12 mt-2 form-floating">
-                    <textarea class="form-control shadow-none" id="floatingInput" placeholder="Escriba su Email"></textarea>
+                    <textarea class="form-control" id="floatingInput" placeholder="Escriba su Email"></textarea>
                     <label for="floatingInput" class="px-4 text-muted">Escriba su Email</label>
                 </div>
                 <div class="col-12 pt-2 d-flex justify-content-center">
