--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container-home">
-    <div class="container-fluid d-flex align-items-center  justify-content-center home">
+    <div class="container-fluid abs-center home">
         <div class="container text-center">
             <!-- <img src={{persona.img}} alt="" class="img-fluid" id="fotodeperfil"> -->
             <h1 class="pb-1 ts-dark display-1 text-uppercase" id="nombre">{{persona.nombre}} {{persona.apellido}}</h1>
