--- a/src/app/components/info/educacion/editeducacion.component.html
+++ b/src/app/components/info/educacion/editeducacion.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid abs-center editEducacion" *ngIf="educacion">
+<div class="container-fluid abs-center editSection" *ngIf="educacion">
     <form (ngSubmit)="onUpdate()" novalidate #f="ngForm" class="text-white col-5">
         <div class="form-group pb-2">
             <label for="nombreE">Nombre de la empresa</label>
