--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,5 +1,5 @@
 <!--Contenedor de la Sección Sobre mí-->
-<div class="container-fluid d-flex row px-0 mx-0 pt-5 justify-content-center container-sobremi">
+<div class="container-fluid d-flex row px-0 mx-0 pt-5 justify-content-center bgDark">
 
     <!--Una Row con la foto y título-->
     <div class="row align-items-center justify-content-center p-0 pt-5">
