--- a/src/app/components/info/skills/edit-skill.component.html
+++ b/src/app/components/info/skills/edit-skill.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid abs-center editSkill" *ngIf="skill">
+<div class="container-fluid abs-center editSection" *ngIf="skill">
     <form (ngSubmit)="onUpdate()" novalidate #f="ngForm" class="text-white col-5">
         <div class="form-group pb-3">
             <label for="nombre" >Nombre de la Skill</label>
