--- a/src/app/components/info/skills/new-skill.component.html
+++ b/src/app/components/info/skills/new-skill.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid abs-center newSKill">
+<div class="container-fluid abs-center editSection">
     <form (ngSubmit)="onCreate()" novalidate #f="ngForm" class="text-white col-5">
         <div class="form-group pb-3">
             <label for="nombre">Nueva Skill</label>
