--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -4,21 +4,6 @@ textarea{resize: none;}
 /*Espacio que abarca en pantalla el formulario de contacto*/
 .contact-section{height: 81vh;}
 
-/*Imagen de fondo */
-.container-contacto{
-    background-image: url(src\assets\images\pexels-kate-trifo-4057059.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 90vh;
-    }
-
-/*Configuración del form-control. Quitado del outline y box shadow*/
-.form-control:focus {
-    outline: 0;
-    box-shadow: none;
-    border: 1px solid var(--medium);
-    box-shadow: 0px 2px 5px var(--dark);}
-
-/*Borde de los input*/
 .form-control{
+    box-shadow: 0px 1px 4px var(--dark);
     border: 2px solid var(--light);}
