--- a/src/app/components/experiencia-y-proyectos/experiencia-y-proyectos.component.html
+++ b/src/app/components/experiencia-y-proyectos/experiencia-y-proyectos.component.html
@@ -1,5 +1,5 @@
 <!--Contenedor de toda la sección Experiencia y Proyectos-->
-<div class="container-fluid d-flex row px-0 mx-0 pt-5 justify-content-center container-experiencia">
+<div class="container-fluid d-flex row px-0 mx-0 pt-5 justify-content-center bgDark">
 
     <!--Una Row con la foto y título-->
     <div class="row align-items-center justify-content-center p-0 pt-5">
