--- a/src/app/components/experiencia-y-proyectos/experiencia/new-experiencia.component.html
+++ b/src/app/components/experiencia-y-proyectos/experiencia/new-experiencia.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid abs-center newExperiencia">
+<div class="container-fluid abs-center editSection">
     <form (ngSubmit)="onCreate()" novalidate #f="ngForm" class="text-white col-5">
         <div class="form-group pb-2">
             <label for="nombreE">Nombre de la empresa</label>
