--- a/src/app/components/home/edit-acerca-de.component.html
+++ b/src/app/components/home/edit-acerca-de.component.html
@@ -1,5 +1,5 @@
-<!-- <div  class="container-fluid editSection abs-center" *ngIf="persona">
-    <form (ngSubmit)="onUpdate()" novalidate #f="ngForm" class="text-white col-5">
+<div  class="container-fluid editSection abs-center" > <!-- *ngIf="persona" -->
+    <!-- <form (ngSubmit)="onUpdate()" novalidate #f="ngForm" class="text-white col-5">
         <div class="form-group pb-2">
             <label for="nombre">Nombre de la persona</label>
             <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="persona.nombre" required>
@@ -15,13 +15,8 @@
             <input type="text" class="form-control" id="descripcion" name="descripcion" [(ngModel)]="persona.descripcion" required>
         </div>
 
-        <div class="form-group pb-3">
-            <label for="descripcion">Imagen de la Persona</label>
-            <input type="file" class="form-control" id="img" name="img" [(ngModel)]="persona.img" (change)="uploadImage($event)" accept=".jpg, .jpeg, .png">
-        </div>
-
         <button class="btn-medium py-2 px-3">
             Editar Perfil
         </button>
-    </form>
-</div> -->
+    </form> -->
+</div>
