--- a/src/app/components/info/educacion/editeducacion.component.css
+++ b/src/app/components/info/educacion/editeducacion.component.css
@@ -1,20 +1,3 @@
-.abs-center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.editEducacion{
-    height: 90vh;
-    background: linear-gradient(var(--storm), var(--dark));
-}
-
-.form-control:focus {
-    outline: 0;
-    box-shadow: none;
-    border: 1px solid var(--medium);
-    box-shadow: 0px 2px 5px var(--dark);}
-
-/*Borde de los input*/
 .form-control{
+    box-shadow: 0px 7px 6px var(--dark);
     border: 2px solid var(--light);}
