--- a/src/app/components/info/educacion/neweducacion.component.html
+++ b/src/app/components/info/educacion/neweducacion.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid newEducacion abs-center">
+<div class="container-fluid editSection abs-center">
     <form (ngSubmit)="onCreate()" novalidate #f="ngForm" class="text-white col-5">
         <div class="form-group pb-2">
             <label for="nombreE">Nombre de la institución</label>
