--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,28 +1,7 @@
-/*Configuración del form-control. Quitado del outline y box shadow*/
-.form-control:focus {
-    outline: 0;
-    box-shadow: none;
-    border: 1px solid var(--medium);
-    box-shadow: 0px 2px 5px var(--dark);}
-
-/*Borde de los input*/
 .form-control{
+    box-shadow: 0px 1px 4px var(--dark);
     border: 2px solid var(--light);}
-
-/*Fondo*/
-.login-bg{
-    background-image: url(src\assets\images\pexels-kate-trifo-4057059.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 90vh;}
-
 /*Height*/
 .login-section{
     height: 81vh;
-}
-
-.abs-center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
