Modificaciones responsive de todo el proyecto

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,30 +1,33 @@
-<div class="m-0 p-0 editSection" >
+<div class="m-0 px-2 editSection" >
     <!-- Formulario -->
     <div class="container d-flex align-items-center px-0 justify-content-center contact-section  my-0 py-0">
 
-        <div class="col-12 col-sm-6 col-lg-5 card rounded-3 p-3 ">
+        <div class="col-10 col-sm-6 col-lg-5">
             <!-- Título -->
-            <h2 class="text-center pb-2 fw-bold pb-3 pt-2">Contactame</h2>
+            <h2 class="text-center py-2 pb-3 text-white titulo text-shadow">Contacto</h2>
+
             <!-- Row -->
-            <div class="row">
+            <div class="row p-0 m-0 gtexto">
                 <!-- Columnas Breakpoint 6 -->
-                <div class="col-6 form-floating ">
-                    <input type="text" class="form-control" placeholder="Nombre" id="floatingInput">
-                    <label for="floatingInput" class="px-4  text-muted">Nombre</label>
+                <div class="col-12 form-floating">
+                    <input  type="text" class="form-control " placeholder="Nombre" id="floatingInput">
+                    <label for="floatingInput" class=" text-muted ps-4">Nombre</label>
                 </div>
-                <div class="col-6 form-floating ">
-                    <input type="text" class="form-control" placeholder="Asunto" id="floatingInput">
-                    <label for="floatingInput" class="px-4  text-muted">Asunto</label>
+                <div class="col-12  form-floating  ">
+                    <input  type="text" class="form-control  " placeholder="Asunto" id="floatingInput">
+                    <label for="floatingInput" class="text-muted ps-4">Asunto</label>
                 </div>
                  <!-- Columnas Breakpoint 12 -->
-                <div class="col-12 mt-2 form-floating">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="email@gmail.com">
-                    <label for="floatingInput" class="px-4 text-muted">email@gmail.com</label>
+                <div class="col-12 form-floating">
+                    <input  type="email" class="form-control" id="floatingInput" placeholder="email@gmail.com">
+                    <label for="floatingInput" class="text-muted  ps-4">email@gmail.com</label>
                 </div>
-                <div class="col-12 mt-2 form-floating">
-                    <textarea class="form-control" id="floatingInput" placeholder="Escriba su Email"></textarea>
-                    <label for="floatingInput" class="px-4 text-muted">Escriba su Email</label>
+                <div class="col-12 form-floating">
+                    <textarea  class="form-control  " id="floatingInput" placeholder="Escriba su Email"></textarea>
+                    <label for="floatingInput" class="text-muted ps-4 ">Escriba su Email</label>
                 </div>
+
+
                 <div class="col-12 pt-2 d-flex justify-content-center">
                     <!-- Botón de Envado-->
                     <button type="button" class="btn-medium p-2 px-4">
@@ -35,6 +38,5 @@
         </div>  
     </div>
     
-    <!--Footer-->
     <app-footer></app-footer>
 </div>
