--- a/src/app/components/credits/credits.component.html
+++ b/src/app/components/credits/credits.component.html
@@ -1,41 +1,42 @@
-<div class="editSection container-fluid">
+<div class="editSection container-fluid d-grid">
 
     <div class="credits-section abs-center pt-4">
         <div class="my-auto fondo-credits px-4 rounded-3 ">
 
-            <h2 class="fs-2 text-shadow text-white d-flex py-3">Créditos</h2> 
-            <div class="row text-white">
+            <h2 class=" text-shadow text-white pt-3 text-center text-lg-start border-bottom border-1">Créditos</h2> 
+  
+            <div class="row text-white texto pt-3">
     
-                <div class="col">
-                    <h4>De Flaticon:</h4>
-                    <ul class="list-unstyled">
-                        <li>
-                            <p>-Persona con bata y café</p>
-                            <p> Usada en sección "Sobre mí"</p>
-                            <a class="credit-link" href="https://www.flaticon.com/free-stickers/spa" title="spa stickers">Spa stickers created by Stickers - Flaticon</a>
+                <div class="col-12 col-md-6">
+                    <h4 class="apartado">De Flaticon:</h4>
+                    <ul class="list-unstyled texto">
+                        <li class="pb-3">
+                            <p class="subtitulo">Persona con bata y café</p>
+                            <p>Usada en sección "Sobre mí"</p>
+                            <a class="credit-link" target="_blank"  href="https://www.flaticon.com/free-stickers/spa" title="spa stickers">Spa stickers created by Stickers - Flaticon</a>
                         </li>
     
-                        <li>
-                            <p>-Documentos</p>
+                        <li class="pb-3">
+                            <p class="subtitulo">Documentos</p>
                             <p>Usada en sección "Experiencia"</p>
-                            <a class="credit-link" href="https://www.flaticon.com/free-stickers/application" title="application stickers">Application stickers created by inipagistudio - Flaticon</a>
+                            <a class="credit-link" target="_blank"  href="https://www.flaticon.com/free-stickers/application" title="application stickers">Application stickers created by inipagistudio - Flaticon</a>
                         </li>
 
-                        <li>
-                            <p>-404</p>
+                        <li class="pb-3">
+                            <p class="subtitulo">404</p>
                             <p>Usada en sección "404"</p>
-                            <a class="credit-link" href="https://www.flaticon.com/free-icons/404-error" title="404 error icons" >404 error icons created by Ghozi Muhtarom - Flaticon</a>
+                            <a class="credit-link" target="_blank"  href="https://www.flaticon.com/free-icons/404-error" title="404 error icons" >404 error icons created by Ghozi Muhtarom - Flaticon</a>
                         </li>  
                     </ul>
                 </div>
     
-                <div class="col">
-                    <h4>De Pexels:</h4>
-                    <ul class="list-unstyled">
-                        <li >
-                            <p>-Escritorio</p>
-                            <p>Usada en sección "Inicio""</p>
-                            <a class="credit-link" href="https://www.pexels.com/es-es/foto/cafe-apple-escritorio-oficina-4057061/" title="spa stickers">Foto de Kate Trifo de Pexels</a>
+                <div class="col-12 col-md-6">
+                    <h4 class="apartado">De Pexels:</h4>
+                    <ul class="list-unstyled texto">
+                        <li  class="pb-3">
+                            <p class="subtitulo">Escritorio</p>
+                            <p>Usada en sección "Inicio"</p>
+                            <a class="credit-link"  target="_blank" href="https://www.pexels.com/es-es/foto/cafe-apple-escritorio-oficina-4057061/" title="spa stickers">Foto de Kate Trifo de Pexels</a>
                         </li>                       
                     </ul>
                 </div>
@@ -44,5 +45,7 @@
         </div>  
     </div>
 
-    <app-footer></app-footer>
+    <div class="align-self-end">
+        <app-footer></app-footer>
+    </div>
 </div>
