--- a/src/app/components/experiencia-y-proyectos/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia-y-proyectos/experiencia/experiencia.component.html
@@ -1,6 +1,6 @@
 <div class="row mx-0 px-lg-5 pb-5">
     <!--Título-->
-    <h2 class="fs-4 px-1 pb-3 border-bottom text-shadow">Quiénes confían en mi trabajo</h2>
+    <h2 class="apartado px-1 pb-3 border-bottom text-shadow">Quiénes confían en mi trabajo</h2>
     <div class="m-0 p-0">
         <button class="btn-medium px-3 py-2" type="button" routerLink="/nuevaexp" *ngIf="isLogged">
             Agregar Experiencia
