--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,38 +1,27 @@
-<div class="editSection">
+<div class="editSection px-2">
     <div class="container abs-center login-section">
-        <section class="text-center col-10 col-md-5">        
-            <div class="card rounded-3 ">
-                <div class="card-body py-3 py-md-4 px-md-4">
-                    <div class="row d-flex justify-content-center">
-                        <div class="col">
-                            <h2 class="fw-bold pb-3 pt-2">Acceso</h2>
-                            <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
-                                <div class="form-floating pb-3">
-                                    <input type="email" class="form-control " id="nombreUsuario" placeholder="Usuario" [(ngModel)]="nombreUsuario" name="nombreUsuario" required>
-                                    <label for="nombreUsuario" class="text-muted">Usuario</label>
-                                </div>
-                                <div class="form-floating pb-3">
-                                    <input type="password" class="form-control" id="password" placeholder="Contraseña" [(ngModel)]="password" name="password" required>
-                                    <label for="password" class=" text-muted">Contraseña</label>
-                                </div>
-                                
-                                <!-- <p class="small pb-3"><a class="text-muted" href="#!">Forgot password?</a></p> -->
-
-                                <!-- Submit button -->
-                                <button type="submit" class="btn-medium px-3 py-2">Entrar</button>
-            
-                                <div class="pt-3">
-                                    <p class="mb-0">No tienes una cuenta? <a href="#!" class="text-muted fw-bold">Regístrate aquí</a>
-                                    </p>
-                                </div>
-                            </form>
-                        </div>
+        <section class="text-center col-10 col-sm-6 col-lg-5">        
+            <div class="py-3 py-md-4 px-md-4">
+                <div class="row d-flex justify-content-center">
+                    <div class="col">
+                        <h2 class="titulo text-white text-shadow pb-3 pt-2">Acceso</h2>
+                        <form  class="gtexto"  #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+                            <div class="form-floating pb-3">
+                                <input type="email" class="form-control " id="nombreUsuario" placeholder="Usuario" [(ngModel)]="nombreUsuario" name="nombreUsuario" required>
+                                <label for="nombreUsuario" class="text-muted">Usuario</label>
+                            </div>
+                            <div class="form-floating pb-3">
+                                <input type="password" class="form-control" id="password" placeholder="Contraseña" [(ngModel)]="password" name="password" required>
+                                <label for="password" class=" text-muted">Contraseña</label>
+                            </div>
+                    
+                            <!-- Submit button -->
+                            <button type="submit" class="btn-medium px-3 py-2">Entrar</button>
+                        </form>
                     </div>
                 </div>
             </div>
         </section>
     </div>
-
-    <!--Footer-->
     <app-footer></app-footer>
 </div>
