--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -7,3 +7,10 @@ textarea{resize: none;}
 .form-control{
     box-shadow: 0px 1px 4px var(--dark);
     border: 2px solid var(--light);}
+
+input{
+    padding: 0%;
+}
+.form-floating{
+    padding-bottom: 0.5em;
+}
