--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,21 +1,14 @@
-/*Título*/
-.ts-dark{
-    color: #fff;
-    text-shadow: 0px 5px 5px  var(--dark);}
-
-/*Fondo*/
 .container-home{
     background-image: url(src\assets\images\pexels-kate-trifo-4057061.jpg);
     background-repeat: no-repeat;
     background-size: cover;}
 
-/*Banner*/
 .home{height: 85vh;}
 
-/*Créditos*/
-.credits{
-    height: 5vh;}
+.credits{height: 5vh;}
 
 .credits:hover, .nav-item:hover{
     color: var(--light);
     transition: ease-in 0.3s; }
+
+a{text-decoration: none;}
