--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,32 +1,28 @@
 <div class="container-home">
+
     <div class="container-fluid abs-center home">
+
         <div class="container text-center">
-            <!-- <img src={{persona.img}} alt="" class="img-fluid" id="fotodeperfil"> -->
-            <h1 class="pb-1 ts-dark display-1 text-uppercase" id="nombre">{{persona.nombre}} {{persona.apellido}}</h1>
-            <!-- <div class="">
-                <h2 class="text-white fs-3">{{persona.descripcion}}</h2>
-            </div> -->
+            
+            <h1 class="pb-1 text-shadow text-white display-1 text-uppercase" id="nombre">Maria Monchot</h1>
+            <h2 class="text-white apartado text-shadow pb-1 pb-md-2">Desarrolladora Web Full Stack Junior</h2>
 
-            <!-- Botones Editar y Borrar -->
-            <div class="d-flex justify-content-center align-items-center" > <!-- adentro *ngIf="isLogged"-->
-                <div class="p-1">
-                    <button class="btn-medium px-2 py-1 sm-text" routerLink="/editAcercaDe/1" >
-                        <i class="fa-regular fa-pen-to-square p-1"></i>Editar Perfil
-                    </button>
-                </div>
+            <div *ngIf="isLogged">
+                <button class="btn-medium px-2 py-1 px-lg-3 py-lg-2 texto" routerLink="/editAcercaDe/1" >
+                    <i class="fa-regular fa-pen-to-square"></i>Editar Perfil
+                </button>
             </div>
-
-            <button type="button" class="btn-medium p-2 px-3 mt-3">Descargar CV</button>
+            <button type="button" class="btn-medium px-2 py-1 px-lg-3 py-lg-2 texto">Descargar CV</button>
 
         </div>
+
     </div>
 
-    <div class="d-flex justify-content-end align-content-end credits">
-        <a class="nav-link credits text-white px-2 py-0 sm-text" routerLink="/Creditos">
-            <div class="nav-item">
-                Créditos
-                <i class="fs-6 fa-solid fa-icons px-1 py-0"></i>
-            </div>
+    <div class="d-flex justify-content-end align-content-end credits ">
+        <a class="text-white px-2 py-0 gtexto" routerLink="/Creditos">Créditos
+            <i class="fs-6 fa-solid fa-icons px-1 py-0"></i>
         </a>
     </div>
+    
+   
 </div>
