--- a/src/app/components/info/educacion/neweducacion.component.html
+++ b/src/app/components/info/educacion/neweducacion.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid editSection abs-center">
-    <form (ngSubmit)="onCreate()" novalidate #f="ngForm" class="text-white col-5">
+    <form (ngSubmit)="onCreate()" novalidate #f="ngForm" class="text-white col-11 col-lg-5">
         <div class="form-group pb-2">
-            <label for="nombreE">Nombre de la institución</label>
+            <label for="nombreE" class="subtitulo">Nombre de la institución</label>
             <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
         </div>
         <div class="form-group pb-3">
-            <label for="descripcionE">Título o certificado</label>
+            <label for="descripcionE" class="subtitulo">Título o certificado</label>
             <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
         </div>
         <button class="btn-medium py-2 px-3">
