--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,39 +1,37 @@
-<!--Contenedor de la Sección Sobre mí-->
-<div class="container-fluid d-flex row px-0 mx-0 pt-5 justify-content-center bgDark">
+<div class="container-fluid abs-center row p-0 m-0 pt-5">
 
-    <!--Una Row con la foto y título-->
-    <div class="row align-items-center justify-content-center p-0 pt-5">
+    <!--Foto y Título-->
+    <div class="row abs-center p-0 px-2 px-md-4">
+
         <!--Foto-->
-        <div class="col-5 m-auto col-sm-4">
+        <div class="col-5 m-auto col-sm-4 col-lg-2">
             <img src="./assets/images/relax (2).png" class="img-section d-block mx-auto my-auto img-fluid mx-0 p-0 " alt="Persona tomando un café">
         </div>
-        <!--Título y Detalle-->
+        
         <div class="col text-white p-0 pe-2 pe-md-5">
-            <h2 class="fs-3 text-shadow">Sobre mí</h2>
-            <!--Detalle-->
-            <p>Mi mayor cualidad es ser Autodidacta.
+            <h2 class="titulo text-shadow">Sobre mí</h2>
+            <p class="subtitulo">Mi mayor cualidad es ser Autodidacta.
             </p>
         </div>
+
     </div>  
     
-    <!--Otra Row con las Secciones-->
-    <div class="row d-flex justify-content-sm-end justify-content-center py-3 px-0">
+    <!--Row para las Secciones-->
+    <div class="row d-flex justify-content-sm-end justify-content-center py-3 px-0 px-2 px-md-4 m-0">
 
-        <!--Dos columnas, una pertenece a una línea decorativa que aparece a partir del breakpoint sm y la otra pertenece a las secciones-->
         <!--Línea Decorativa-->
-        <div class="col-2 p-0 vr px-md-1 d-sm-flex justify-content-end d-none"></div>
+        <div class="vr col-2 col-lg-1 d-none justify-content-lg-start p-0  px-md-1 d-sm-flex justify-content-end "></div>
 
         <!--Secciones-->
-        <div class="col col-sm-10 text-white justify-content-center mt-3 mt-lg-5 pb-5 mb-0">
+        <div class="col col-sm-10 col-lg-11 text-white justify-content-center pt-3 pt-lg-5 pb-5 m-0">
 
-            <!--Row Educacion-->
             <app-educacion></app-educacion>
             
-            <!--Row Skills-->
             <app-skills></app-skills>   
-            
-            
+
         </div> 
     </div>
+
     <app-footer></app-footer>
+    
 </div>
