--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -5,3 +5,14 @@
 .login-section{
     height: 81vh;
 }
+
+.form-control{
+    box-shadow: 0px 1px 4px var(--dark);
+    border: 2px solid var(--light);}
+
+input{
+    padding: 0%;
+}
+.form-floating{
+    padding-bottom: 0.5em;
+}
