--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,10 +1,10 @@
 <!-- Barra de Navegación expansible a partir de dispositivos large -->
-<nav class="navbar navbar-expand-lg navbar-dark mt-0 py-0" aria-label="Offcanvas navbar large">
+<nav class="navbar navbar-expand-lg navbar-dark mt-0 py-0 sticky-top" aria-label="Offcanvas navbar large">
     <!-- Contenedor Fluido -->
     <div class="container-fluid p-2 px-3 ps-lg-5 fondo-nav">
   
       <!-- ícono Plan Programar -->
-      <a class=" navbar-brand pe-3" href="https://www.argentina.gob.ar/economia/conocimiento/argentina-programa">
+      <a class=" navbar-brand pe-3" href="https://www.argentina.gob.ar/economia/conocimiento/argentina-programa" target="_blank">
         <img  src="assets/images/APLogo.png" alt="Logo Plan Programar Argentina"  class="logo-Plan">
       </a>
     
@@ -17,17 +17,15 @@
       <div class="offcanvas offcanvas-end bg-offcanvas-nav " tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
   
         <!-- Offcanvas Header -->
-        <div class="offcanvas-header">
+        <div class="offcanvas-header justify-content-center">
           <!-- Título dentro del nav  -->
-          <h5 class="offcanvas-title p-3 text-white" id="offcanvasNavbarLabel">Web Developer Maria Monchot</h5>
-          <!-- Botón de cerrado -->
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <h5 class="offcanvas-title py-3 text-white fs-6 text-center" id="offcanvasNavbarLabel">Web Developer Maria Monchot</h5>
         </div>
   
         <!-- Offcanvas Body -->
-        <div class="offcanvas-body">
+        <div class="offcanvas-body fs-6">
           <!-- Lista Desorganizada -->
-          <ul class="navbar-nav pe-5 gap-3 align-items-center justify-content-center">
+          <ul class="navbar-nav p-lg-3 gap-2 gap-lg-3 align-items-center justify-content-center">
             <!-- Ítems -->
             <li class="nav-item ">
               <a class="nav-link" aria-current="page" routerLink="/Inicio">Inicio</a>
@@ -46,15 +44,20 @@
               <button type="button" class="btn-medium px-2 py-1" (click)="onLogOut()" *ngIf="isLogged">Retirada</button>
             </li>
             <li class="nav-item" >
-              <a class="nav-link" href="https://github.com/KateClysm" id="github"><i class="fs-3 fa-brands fa-github"></i></a>
+              <a class="nav-link" href="https://github.com/KateClysm" id="github" target="_blank"><i class="fs-3 fa-brands fa-github"></i></a>
             </li>
             <li class="nav-item" >
-              <a class="nav-link" href="https://stackoverflow.com/users/20352686/maria-monchot" id="stackoverflow"><i class="fs-3 fa-brands fa-stack-overflow"></i></a>
+              <a class="nav-link" href="https://stackoverflow.com/users/20352686/maria-monchot" id="stackoverflow" target="_blank"><i class="fs-3 fa-brands fa-stack-overflow"></i></a>
             </li>
             <li class="nav-item" >
-              <a class="nav-link" href="#" id="linkedin"><i class="fs-3 fa-brands fa-linkedin"></i></a>
+              <a class="nav-link" href="https://www.linkedin.com/in/maria-monchot/" id="linkedin" target="_blank"><i class="fs-3 fa-brands fa-linkedin" target="_blank"></i></a>
+            </li>
+            <li class="nav-item">
+              <!-- Botón de cerrado -->
+              <button type="button" class="btn-close btn-close-white p-3 fs-4 d-lg-none" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </li>
           </ul>
+          
         </div>
   
       </div>
