Configuración del login

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -7,7 +7,7 @@
             <h2 class="text-center py-2 pb-3 text-white titulo text-shadow">Contacto</h2>
 
             <!-- Row -->
-            <div class="row p-0 m-0 gtexto">
+            <div class="row p-0 m-0 fs-6">
                 <!-- Columnas Breakpoint 6 -->
                 <div class="col-12 form-floating">
                     <input  type="text" class="form-control " placeholder="Nombre" id="floatingInput">
