--- a/src/app/components/credits/credits.component.html
+++ b/src/app/components/credits/credits.component.html
@@ -17,9 +17,9 @@
                         </li>
     
                         <li class="pb-3">
-                            <p class="subtitulo">Documentos</p>
+                            <p class="subtitulo">Trabajo</p>
                             <p>Usada en sección "Experiencia"</p>
-                            <a class="credit-link" target="_blank"  href="https://www.flaticon.com/free-stickers/application" title="application stickers">Application stickers created by inipagistudio - Flaticon</a>
+                            <a class="credit-link" target="_blank"  href="https://www.flaticon.com/free-stickers/people" title="people stickers">People stickers created by Stickers - Flaticon</a>
                         </li>
 
                         <li class="pb-3">
