--- a/src/app/components/experiencia-y-proyectos/experiencia-y-proyectos.component.html
+++ b/src/app/components/experiencia-y-proyectos/experiencia-y-proyectos.component.html
@@ -4,7 +4,7 @@
     <div class="row abs-center p-0 px-2 px-md-4">
 
        <div class="col-5 m-auto col-sm-4 col-lg-2">
-           <img src=".\assets\images\application.png" class="img-section d-block mx-auto my-auto img-fluid mx-0 p-0 " alt="Persona tomando un café">
+           <img src=".\assets\images\monitoring.png" class="img-section d-block mx-auto my-auto img-fluid mx-0 p-0 " alt="Persona usando computadora">
        </div>
 
        <div class="col text-white p-0 pe-2 pe-md-5">
