--- a/src/app/components/info/info.component.css
+++ b/src/app/components/info/info.component.css
@@ -1,7 +1,7 @@
 /*Línea decoradora*/
 .vr{
     /* height: 100vh; */
-    background:linear-gradient(#fff, #167e8c);
+    background:linear-gradient(#167e8c, #fff);
     opacity: 1;
     width: 0.2rem;
     border-radius: 1rem;}
