--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -23,9 +23,9 @@
         </div>
   
         <!-- Offcanvas Body -->
-        <div class="offcanvas-body fs-6">
+        <div class="offcanvas-body">
           <!-- Lista Desorganizada -->
-          <ul class="navbar-nav p-lg-3 gap-2 gap-lg-3 align-items-center justify-content-center">
+          <ul class="navbar-nav gap-2 gap-lg-3 align-items-center justify-content-center gtexto">
             <!-- Ítems -->
             <li class="nav-item ">
               <a class="nav-link" aria-current="page" routerLink="/Inicio">Inicio</a>
@@ -44,13 +44,13 @@
               <button type="button" class="btn-medium px-2 py-1" (click)="onLogOut()" *ngIf="isLogged">Retirada</button>
             </li>
             <li class="nav-item" >
-              <a class="nav-link" href="https://github.com/KateClysm" id="github" target="_blank"><i class="fs-3 fa-brands fa-github"></i></a>
+              <a class="nav-link" href="https://github.com/KateClysm" id="github" target="_blank"><i class="fs-4 fa-brands fa-github"></i></a>
             </li>
             <li class="nav-item" >
-              <a class="nav-link" href="https://stackoverflow.com/users/20352686/maria-monchot" id="stackoverflow" target="_blank"><i class="fs-3 fa-brands fa-stack-overflow"></i></a>
+              <a class="nav-link" href="https://stackoverflow.com/users/20352686/maria-monchot" id="stackoverflow" target="_blank"><i class="fs-4 fa-brands fa-stack-overflow"></i></a>
             </li>
             <li class="nav-item" >
-              <a class="nav-link" href="https://www.linkedin.com/in/maria-monchot/" id="linkedin" target="_blank"><i class="fs-3 fa-brands fa-linkedin" target="_blank"></i></a>
+              <a class="nav-link" href="https://www.linkedin.com/in/maria-monchot/" id="linkedin" target="_blank"><i class="fs-4 fa-brands fa-linkedin" target="_blank"></i></a>
             </li>
             <li class="nav-item">
               <!-- Botón de cerrado -->
