--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -10,7 +10,7 @@
         
         <div class="col text-white p-0 pe-2 pe-md-5">
             <h2 class="titulo text-shadow">Sobre mí</h2>
-            <p class="subtitulo">Mi mayor cualidad es ser Autodidacta.
+            <p class="gtexto">Mi mayor cualidad es ser Autodidacta.
             </p>
         </div>
 
