--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,15 +4,15 @@
             <div class="py-3 py-md-4 px-md-4">
                 <div class="row d-flex justify-content-center">
                     <div class="col">
-                        <h2 class="titulo text-white text-shadow pb-3 pt-2">Acceso</h2>
-                        <form  class="gtexto"  #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+                        <h2 class="apartado text-white text-shadow pb-3 pt-2">Acceso</h2>
+                        <form  class="fs-6"  #f="ngForm" (ngSubmit)="onLogin()" novalidate>
                             <div class="form-floating pb-3">
-                                <input type="email" class="form-control " id="nombreUsuario" placeholder="Usuario" [(ngModel)]="nombreUsuario" name="nombreUsuario" required>
-                                <label for="nombreUsuario" class="text-muted">Usuario</label>
+                                <input type="text" class="form-control " id="nombreUsuario" placeholder="Usuario" [(ngModel)]="nombreUsuario" name="nombreUsuario" required>
+                                <label for="nombreUsuario" class="text-muted  ">Usuario</label>
                             </div>
                             <div class="form-floating pb-3">
                                 <input type="password" class="form-control" id="password" placeholder="Contraseña" [(ngModel)]="password" name="password" required>
-                                <label for="password" class=" text-muted">Contraseña</label>
+                                <label for="password" class=" text-muted ">Contraseña</label>
                             </div>
                     
                             <!-- Submit button -->
